# healvana-chat-api

./: README.md  docker-compose.yml  integration-api.md  kubernetes-manifests.yaml
langchain/: Dockerfile  pyproject.toml  requirements.txt  serve.py
langchain/personas/en-US/: greeting.txt  hotlines.json  system.prompt
ollama/: Dockerfile  entrypoint.sh
web/src/: app.d.ts  app.html
web/src/routes/: +page.svelte
